NIAD-379: Acceptance type 2 transaction - first (#97)