@@ -1,30 +1,36 @@
 package uk.nhs.digital.nhsconnect.nhais.mapper;
 
-import org.hl7.fhir.r4.model.HumanName;
-import org.hl7.fhir.r4.model.Parameters;
-import org.hl7.fhir.r4.model.Patient;
-import org.junit.jupiter.api.Test;
-import uk.nhs.digital.nhsconnect.nhais.exceptions.FhirValidationException;
-import uk.nhs.digital.nhsconnect.nhais.model.edifact.PersonName;
-import uk.nhs.digital.nhsconnect.nhais.model.fhir.NhsIdentifier;
-import uk.nhs.digital.nhsconnect.nhais.service.edifact_to_fhir.PatientParameter;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.util.Collections;
 import java.util.List;
 
-import static org.junit.jupiter.api.Assertions.assertEquals;
-import static org.junit.jupiter.api.Assertions.assertThrows;
+import uk.nhs.digital.nhsconnect.nhais.exceptions.FhirValidationException;
+import uk.nhs.digital.nhsconnect.nhais.model.edifact.PersonName;
+import uk.nhs.digital.nhsconnect.nhais.model.fhir.NhsIdentifier;
+import uk.nhs.digital.nhsconnect.nhais.model.fhir.PatientName;
+import uk.nhs.digital.nhsconnect.nhais.service.edifact_to_fhir.PatientParameter;
+
+import org.hl7.fhir.r4.model.HumanName;
+import org.hl7.fhir.r4.model.Parameters;
+import org.hl7.fhir.r4.model.Patient;
+import org.junit.jupiter.api.Test;
 
 class PersonNameMapperTest {
 
-    @Test
-    void When_MappingPatientName_Then_ExpectCorrectResult() {
-        Patient patient = new Patient();
-        HumanName humanName = new HumanName();
-        humanName.setFamily("Smith");
+    public static final String NHS_NUMBER = "1234567890";
+    public static final String FAMILY_NAME = "Smith";
 
-        patient.setName(Collections.singletonList(humanName));
-        patient.setIdentifier(List.of(new NhsIdentifier("1234567890")));
+    @Test
+    void When_MappingPatientFamilyName_Then_ExpectCorrectResult() {
+        Patient patient = new Patient();
+        PatientName patientName = PatientName.builder()
+            .familyName(FAMILY_NAME)
+            .build();
+
+        patient.setName(Collections.singletonList(patientName));
+        patient.setIdentifier(List.of(new NhsIdentifier(NHS_NUMBER)));
 
         Parameters parameters = new Parameters()
             .addParameter(new PatientParameter(patient));
@@ -34,8 +40,42 @@ class PersonNameMapperTest {
 
         var expectedPersonName = PersonName
             .builder()
-            .nhsNumber("1234567890")
-            .familyName("Smith")
+            .nhsNumber(NHS_NUMBER)
+            .familyName(FAMILY_NAME)
+            .patientIdentificationType(PersonName.PatientIdentificationType.OFFICIAL_PATIENT_IDENTIFICATION)
+            .build();
+
+        assertEquals(expectedPersonName.toEdifact(), personName.toEdifact());
+    }
+
+    @Test
+    void When_MappingAllPossiblePatientNames_Then_ExpectCorrectResult() {
+        Patient patient = new Patient();
+        PatientName patientName = PatientName.builder()
+            .familyName(FAMILY_NAME)
+            .forename("Forename")
+            .middleName("middleName")
+            .thirdForename("third Forename")
+            .title("title")
+            .build();
+
+        patient.setName(Collections.singletonList(patientName));
+        patient.setIdentifier(List.of(new NhsIdentifier(NHS_NUMBER)));
+
+        Parameters parameters = new Parameters()
+            .addParameter(new PatientParameter(patient));
+
+        var personNameMapper = new PersonNameMapper();
+        PersonName personName = personNameMapper.map(parameters);
+
+        var expectedPersonName = PersonName
+            .builder()
+            .nhsNumber(NHS_NUMBER)
+            .familyName(FAMILY_NAME)
+            .forename("Forename")
+            .middleName("middleName")
+            .thirdForename("third Forename")
+            .title("title")
             .patientIdentificationType(PersonName.PatientIdentificationType.OFFICIAL_PATIENT_IDENTIFICATION)
             .build();
 
@@ -45,7 +85,7 @@ class PersonNameMapperTest {
     @Test
     public void When_MappingWithoutSurname_Then_UnsupportedOperationExceptionIsThrown() {
         Patient patient = new Patient();
-        patient.setIdentifier(List.of(new NhsIdentifier("1234567890")));
+        patient.setIdentifier(List.of(new NhsIdentifier(NHS_NUMBER)));
         patient.setName(List.of());
 
         Parameters parameters = new Parameters()
@@ -59,7 +99,7 @@ class PersonNameMapperTest {
     void When_MappingWithoutNhsNumber_Then_ExpectCorrectResult() {
         Patient patient = new Patient();
         HumanName humanName = new HumanName();
-        humanName.setFamily("Smith");
+        humanName.setFamily(FAMILY_NAME);
 
         patient.setName(Collections.singletonList(humanName));
 
@@ -70,7 +110,7 @@ class PersonNameMapperTest {
         PersonName personName = personNameMapper.map(parameters);
 
         var expectedPersonName = PersonName.builder()
-            .familyName("Smith")
+            .familyName(FAMILY_NAME)
             .build();
 
         assertEquals(expectedPersonName.toEdifact(), personName.toEdifact());
